优化首页banner的接口问题

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -1,5 +1,18 @@
 ### vip(唯品会的接口文档)
 #### 首页
+- 获取banner广告的图片接口
+- url https://pcapi.vip.com/cmc/index.php
+- 参数
+> callback: shopAds
+type: ADSEC56K,ADSP1Q2W,ADSZBA78,ADSIR7IX,ADSX7W3G,ADSNNLS7,ADS7JI3F,ADS2B669,ADSITG64,ADS45AV4,ADSHS93V,ADS44T33,ADS14OC5,ADSU3XLQ,ADSY2DWE,ADS3NGX5
+warehouse: VIP_SH
+areaid: 103104
+preview: 0
+date_from: 
+time_from: 
+user_class: 
+channelId: 0
+
 - 获取每一层梯子的数据
 - url : https://www.vip.com/ajax/getBrandRank.php
 - 参数
