活动页数据渲染功能完成并且抽离了一些通用的样式和html和js函数

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -122,3 +122,23 @@ pcmpWidth: 750
 mobile_channel: nature 
 functions: jumper 
 _: 1586265437631 
+
+### 活动页
+- url : https://h5.vip.com/dp/getDataPC
+- 参数 
+> callback: jQuery110205745630842372849_1586856193640
+serviceType: 2
+componentId: 352241
+pageSize: 100
+dataSourceScene: BRAND_COMPONENT
+salesQueryFields: brandStoreInfos,query4BrandFav
+salesScene: 
+topSalesList: 
+pageId: 100016060
+warehouse: VIP_SH
+fdc_area_id: 104104101
+area_id: 103104110
+api_key: 70f71280d5d547b2a7bb370a529aeea1
+mars_cid: 1585923048293_a96d442f0be377ab63fc1790f5d32873
+is_front: 1
+_: 1586856193641
