完成商品列表选择面板筛选功能的部分布局

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -142,3 +142,24 @@ api_key: 70f71280d5d547b2a7bb370a529aeea1
 mars_cid: 1585923048293_a96d442f0be377ab63fc1790f5d32873
 is_front: 1
 _: 1586856193641
+
+### 列表页面
+- url : https://mapi.vip.com/vips-mobile/rest/shopping/pc/screening/category/get/v2
+- 参数
+> callback: getCategoryListCb
+app_name: shop_pc
+app_version: 4.0
+warehouse: VIP_SH
+fdc_area_id: 103104110
+client: pc
+mobile_platform: 1
+province_id: 103104
+api_key: 70f71280d5d547b2a7bb370a529aeea1
+user_id: 
+mars_cid: 1586916379082_4f21050de8cc284da6366886163b7623
+wap_consumer: a
+functions: showLabel
+useStandardSize: 1
+brandStoreSns: 
+brand_id: 100625141
+_: 1586916411965
