完成了列表选项卡的数据渲染和bug问题修复事件每次操作两次无法成功选择数据的问题

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -143,7 +143,7 @@ mars_cid: 1585923048293_a96d442f0be377ab63fc1790f5d32873
 is_front: 1
 _: 1586856193641
 
-### 列表页面
+### 列表页面的选择菜单
 - url : https://mapi.vip.com/vips-mobile/rest/shopping/pc/screening/category/get/v2
 - 参数
 > callback: getCategoryListCb
@@ -162,4 +162,4 @@ functions: showLabel
 useStandardSize: 1
 brandStoreSns: 
 brand_id: 100625141
-_: 1586916411965
+_: 1586951875855
